# uniffi-android-error-repro

./: Cargo.toml  build.sh
android/: settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: build.gradle
android/lib/src/main/kotlin/uniffi/crate_a/: crate_a.kt
android/lib/src/main/kotlin/uniffi/crate_b/: crate_b.kt
crates/crate-a/: Cargo.toml
crates/crate-a/src/: lib.rs
crates/crate-b/: Cargo.toml
crates/crate-b/src/: lib.rs
crates/crate-c/: Cargo.toml
crates/crate-c/src/: lib.rs
crates/uniffi-bindgen/: Cargo.toml
